opam-version: "2.0"

maintainer: "hello@tweag.io"
authors: [ "Tweag" ]

homepage: "https://github.com/tweag/topiary"
bug-reports: "https://github.com/tweag/topiary/issues"
dev-repo: "git+https://github.com/tweag/topiary.git"

license: "MIT"
depends: ["conf-rust-2021"]

build:[
  [ "cargo" "build" "--release" "--package" "topiary" ]
  [ "sh" "make-topiary-wrapper.sh"
      "--language-dir" "%{share}%/topiary/languages"
      "--topiary-wrapped" "%{bin}%/.topiary-wrapped"
      "--output-file" "topiary-wrapper" ]
]

install: [
  [ "cp" "target/release/topiary" "%{bin}%/.topiary-wrapped" ]
  [ "cp" "topiary-wrapper" "%{bin}%/topiary" ]
  [ "mkdir" "%{share}%/topiary" ]
  [ "cp" "-R" "topiary/languages" "%{share}%/topiary/languages" ]
]

synopsis: "A formatter for OCaml based on the Topiary universal formatting engine"
