opam-version: "2.0"

maintainer: "hello@tweag.io"
authors: [ "Tweag" ]

homepage: "https://topiary.tweag.io/"
bug-reports: "https://github.com/tweag/topiary/issues"
dev-repo: "git+https://github.com/tweag/topiary.git"

license: "MIT"
depends: ["conf-rust-2021"]

build:[
  [ "cargo" "build"
      "--release"
      "--package" "topiary-cli" ]
  [ "sh" "make-topiary-wrapper.sh"
      "--language-dir" "%{share}%/topiary/languages"
      "--topiary-wrapped" "%{bin}%/.topiary-wrapped/topiary"
      "--output-file" "topiary-wrapper" ]
]

install: [
  [ "mkdir" "%{bin}%/.topiary-wrapped" ]
  [ "cp" "target/release/topiary" "%{bin}%/.topiary-wrapped/topiary" ]
  [ "cp" "topiary-wrapper" "%{bin}%/topiary" ]
  [ "mkdir" "%{share}%/topiary" ]
  [ "cp" "-R" "topiary/languages" "%{share}%/topiary/languages" ]
]

synopsis: "A formatter for OCaml based on the Topiary universal formatting engine"
description: """
Topiary is a tool in the Tree-sitter ecosystem, designed for formatter authors
and formatter users. Authors can create a formatter without having to write
their own engine or even their own parser. Users benefit from uniform code style
and the convenience of using a single formatter tool across multiple languages.

Topiary is written in Rust and developed by Tweag.
"""
